[tool.poetry]
name = "starkware"
version = "0.1.0"
description = ""
authors = ["Tomasz Mierzwa <tomek@tfi.team>, Karol Chojnowski <karol@tfi.team>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "*"
autoflake = "^1.3.1"
flake8 = "^4.0.1"
black = "==19.3b0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88

[flake8]
max-line-length = 88
extend-ignore = "E203"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
